--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,10 @@
 
 .header-info {
   position: absolute;
+  right: 10px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
   padding: 18px;
   gap: 8px;
   user-select: none;
@@ -37,7 +38,7 @@
   text-transform: uppercase;
   font-size: 1.5em;
   font-weight: 600;
-  color: #ffb703;
+  color: #fff;
 }
 
 .lives {
