--- a/src/App.css
+++ b/src/App.css
@@ -9,23 +9,41 @@
   width: 100%;
   text-align: center;
   margin-bottom: 100%;
+  background-color: #a6b04f;
 }
 
 .header-info {
   position: absolute;
-  right: 10px;
+  right: 0px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   padding: 18px;
   gap: 8px;
   user-select: none;
+  width: 100%;
+  background-color: #283618;
+}
+
+.footer-info {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 18px;
+  gap: 8px;
+  user-select: none;
+  width: 100%;
+  background-color: #283618;
 }
 
 .title {
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 1em;
   font-weight: 300;
+  color: #f9f9f9;
 }
 
 .high-score {
