--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   width: 100%;
   text-align: center;
   margin-bottom: 100%;
-  background-color: #a6b04f;
+  background-color: #72751c;
 }
 
 .header-info {
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 18px;
+  padding: 12px;
   gap: 8px;
   user-select: none;
   width: 100%;
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 18px;
+  padding: 12px;
   gap: 8px;
   user-select: none;
   width: 100%;
