feat: removed walls assets, updates scale of player and game speed

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   gap: 8px;
   user-select: none;
   width: 100%;
-  background-color: #283618;
+  background-color: #283618da;
 }
 
 .footer-info {
@@ -36,7 +36,7 @@
   gap: 8px;
   user-select: none;
   width: 100%;
-  background-color: #283618;
+  background-color: #283618da;
 }
 
 .title {
